test/types/type_variables/jplevyak/construct-1.good
construct-1.chpl:6: error: unresolved type specifier 'R(t=type real(64), x=3)'
construct-1.chpl:1: note: this candidate did not match: R(type t)
construct-1.chpl:6: note: because call uses named argument x
construct-1.chpl:1: note: but function contains no formal named x
